@@ -1,3 +1,7 @@
+Thu Jul 31 01:11:58 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* thread.c (ruby_vm_specific_ptr): fix for reallocation.
+
 Thu Jul 31 00:58:33 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* pack.c (pack_unpack): reduced static variables.
